test/programs/bad/example08-groverAlgorithm__FunctionNamesDefinitionDoesNotMatchDeclaration.lq
oracle ::  !(Qbit ** 8 -> Qbit ** 8)
oracle' qubits = (q0, q1, q2, q3, q4, q5, q6, q7) <- qubits;
                with [ q0, q1, q2, q3, q4, q5, q6 ] ctrl [ @1, @0, @1, @1, @1, @1, @1] gate X q7

groverDiffusionOperator :: !(Qbit ** 8 -> Qbit ** 8)
groverDiffusionOperator' qubits = (q0, q1, q2, q3, q4, q5, q6, q7) <- qubits;
                                  (q0, q1, q2, q3, q4, q5, q6) <- (gate H q0, gate H q1, gate H q2, gate H q3, gate H q4, gate H q5, gate H q6);
                                  (q0, q1, q2, q3, q4, q5, q6) <- (gate X q0, gate X q1, gate X q2, gate X q3, gate X q4, gate X q5, gate X q6);
                                  (q0, q1, q2, q3, q4, q5, q6) <- with [ q0, q1, q2, q3, q4, q5 ] ctrl [ @1, @1, @1, @1, @1, @1] gate Z q6;
                                  (q0, q1, q2, q3, q4, q5, q6) <- (gate X q0, gate X q1, gate X q2, gate X q3, gate X q4, gate X q5, gate X q6);
                                  (q0, q1, q2, q3, q4, q5, q6) <- (gate H q0, gate H q1, gate H q2, gate H q3, gate H q4, gate H q5, gate H q6);
                                  (q0, q1, q2, q3, q4, q5, q6, q7)

main :: !(Bit ** 7)
main = (q0, q1, q2, q3, q4, q5, q6, q7) <- (new @0, new @0, new @0, new @0, new @0, new @0, new @0, new @0);
       q7 <- gate X q7;
       (q0, q1, q2, q3, q4, q5, q6, q7) <- (gate H q0, gate H q1, gate H q2, gate H q3, gate H q4, gate H q5, gate H q6 gate H q7);
       (q0, q1, q2, q3, q4, q5, q6, q7) <- oracle $ groverDiffusionOperator q0 q1 q2 q3 q4 q5 q6 q7;
       (q0, q1, q2, q3, q4, q5, q6, q7) <- oracle $ groverDiffusionOperator q0 q1 q2 q3 q4 q5 q6 q7;
       (q0, q1, q2, q3, q4, q5, q6, q7) <- oracle $ groverDiffusionOperator q0 q1 q2 q3 q4 q5 q6 q7;
       (q0, q1, q2, q3, q4, q5, q6, q7) <- oracle $ groverDiffusionOperator q0 q1 q2 q3 q4 q5 q6 q7;
       (q0, q1, q2, q3, q4, q5, q6, q7) <- oracle $ groverDiffusionOperator q0 q1 q2 q3 q4 q5 q6 q7;
       (q0, q1, q2, q3, q4, q5, q6, q7) <- oracle $ groverDiffusionOperator q0 q1 q2 q3 q4 q5 q6 q7;
       (q0, q1, q2, q3, q4, q5, q6, q7) <- oracle $ groverDiffusionOperator q0 q1 q2 q3 q4 q5 q6 q7;
       (measr q0, measr q1, measr q2, measr q3, measr q4, measr q5, measr q6)
